--- a/Capstone_Appliances_Energy_Prediction.ipynb
+++ b/Capstone_Appliances_Energy_Prediction.ipynb
@@ -319,6 +319,30 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# problems\n",
+        "1) what is monthly meter reading ?\n",
+        "\n",
+        "2) What is the meter reading on hourly basis?\n",
+        "\n",
+        "3) How is the relationship between temperature and humidity ?\n",
+        "\n",
+        "4) what is monthly average temperature inside and outside ?\n",
+        "\n",
+        "5) What is the temperature fluctuation in each room ?\n",
+        "\n",
+        "6) What is daily wind spead and visibiity ?\n",
+        "\n",
+        "7) How was visibility with outside temperature?\n",
+        "\n",
+        "8) is there any difference in meter reading when compaired to inside and outside temperatur?"
+      ],
+      "metadata": {
+        "id": "w0NnRXGPvoM8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# **General Guidelines** : -  "
       ],
       "metadata": {
@@ -825,25 +849,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# problems\n",
-        "5)monthly avg temperature to outside temperature(to meter reading)\n",
-        "\n",
-        "10) Pressure to other variable \n",
-        "\n",
-        "11) daily average meter reading\n",
-        "\n",
-        "12) daily average meter reading(label the range of emperature) to daily average in temp to daily avg out temp\n",
-        "\n",
-        "13) minumum temperaature otside to temperature inside and meter reading.\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "w0NnRXGPvoM8"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "## 3. ***Data Wrangling***"
       ],
       "metadata": {
@@ -944,7 +949,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Since date is in object type convert to datetime type :%M:%S\n",
+        "#Since date is in object type convert to datetime type :\n",
         "Aep_df2['new_date'] = Aep_df2['date'].apply(lambda row: datetime.strptime(row, '%Y-%m-%d %H:%M:%S'))"
       ],
       "metadata": {
@@ -956,7 +961,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# explode formated date in new colums as day,month and hour\n",
+        "# explode formated date in new colums as date,year,month, day and hour\n",
         "Aep_df2['Date']= Aep_df2['new_date'].apply(lambda x: datetime.strftime(x,'%Y-%m-%d')) \n",
         "\n",
         "Aep_df2['Year'] = Aep_df2['new_date'].dt.year\n",
@@ -1044,28 +1049,6 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "### What all manipulations have you done and insights you found?"
-      ],
-      "metadata": {
-        "id": "MSa1f5Uengrz"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**Answer Here.**\n",
-        "\n",
-        "1) Since the temperature and humidity are individually given for each room type try to make the overall average of temperatur and humidity for further comparison.\n",
-        "\n",
-        "2)Break the date into year,month,weekday,hours(Because temperature and humidty mostly vary on hourly bases).Since year is only 2016,therefore we will drop it as it is a constant value in year column."
-      ],
-      "metadata": {
-        "id": "LbyXE7I1olp8"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# 1) group by hour, date (day and month) in avg temperature in,out,meter reading.\n",
@@ -1089,20 +1072,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "1) Average Temperature inside house is between 16 to 26 degree celsius(optimum),even tough temperature outside was varing on large range beween -5 to 25 degree celsius.\n",
-        "\n",
-        "2) Humidity is inversly proportion to temperatue\n",
-        "\n",
-        "\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "TnbmAR_bIPSv"
-      }
     },
     {
       "cell_type": "code",
@@ -1159,6 +1128,46 @@
     {
       "cell_type": "markdown",
       "source": [
+        "### What all manipulations have you done and insights you found?"
+      ],
+      "metadata": {
+        "id": "MSa1f5Uengrz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Answer Here.**\n",
+        "\n",
+        "1) Since the temperature and humidity are individually given for each room type try to make the overall average of temperatur and humidity for further comparison.\n",
+        "\n",
+        "2)Break the date into date, year,month,day,hours(Because temperature and humidty mostly vary on hourly bases).Since year is only 2016,therefore we will drop it as it is a constant value in year column.\n",
+        "\n",
+        "3)Grouping by date and hour ,so we can get hourly every day data.\n",
+        "\n",
+        "4)Creating a set of range of meter readings to find the diferent range and there count.\n"
+      ],
+      "metadata": {
+        "id": "LbyXE7I1olp8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1) Average Temperature inside house is between 16 to 26 degree celsius(optimum),even tough temperature outside was varing on large range beween -5 to 25 degree celsius.\n",
+        "\n",
+        "2) Humidity is inversly proportion to temperatue\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "TnbmAR_bIPSv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## ***4. Data Vizualization, Storytelling & Experimenting with charts : Understand the relationships between variables***"
       ],
       "metadata": {
@@ -1205,6 +1214,8 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**Observation**\n",
+        "\n",
         "1) Meter reading is right skewwed ,with highest count for the meter reading range between 50 to 60.\n",
         "\n",
         "2)Kitchen temperture,living room temperature,laundry_room_temp,office_room_temp, bathroom_temp,ironing_room_temp ,teenager_room_temp,parents_room_temp,,Avg_house_Temp allmost every room had normal distribution with nearly high fluctuating range of temperature is beween 18 to 24.\n",
@@ -1218,81 +1229,6 @@
       ],
       "metadata": {
         "id": "rLCYmUYfqzjD"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### Chart - 2"
-      ],
-      "metadata": {
-        "id": "KSlN3yHqYklG"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Chart - 2 visualization code"
-      ],
-      "metadata": {
-        "id": "R4YgtaqtYklH"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 1. Why did you pick the specific chart?"
-      ],
-      "metadata": {
-        "id": "t6dVpIINYklI"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "5aaW0BYyYklI"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 2. What is/are the insight(s) found from the chart?"
-      ],
-      "metadata": {
-        "id": "ijmpgYnKYklI"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here"
-      ],
-      "metadata": {
-        "id": "PSx9atu2YklI"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 3. Will the gained insights help creating a positive business impact? \n",
-        "Are there any insights that lead to negative growth? Justify with specific reason."
-      ],
-      "metadata": {
-        "id": "-JiQyfWJYklI"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here"
-      ],
-      "metadata": {
-        "id": "BcBbebzrYklV"
       }
     },
     {
@@ -1534,6 +1470,55 @@
         "#### Chart - 6"
       ],
       "metadata": {
+        "id": "f18zk8uAsObK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Daily_Hr_data ['energy_range'] = Daily_Hr_data['meter_reading'].apply(reading_range)\n",
+        "Daily_Hr_data"
+      ],
+      "metadata": {
+        "id": "aXkNJ-Cjti3S"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.subplots(figsize = (30, 8))\n",
+        "plt.grid(visible= True, which='major', axis='both')\n",
+        "plt.plot(Daily_Hr_data['Date'],Daily_Hr_data['Chievres_weather_station_temp'],Daily_Hr_data['Date'],Daily_Hr_data['Chievres_weather_station_hum'], linewidth=2.0)\n",
+        "plt.title('Relation between temp and humidity',size=15,fontdict={\"weight\": \"bold\"})\n",
+        "#set label\n",
+        "plt.xlabel('Date',size=15,fontdict={\"weight\": \"bold\"})\n",
+        "plt.ylabel('Temp and humidity readings',size=15,fontdict={\"weight\": \"bold\"})"
+      ],
+      "metadata": {
+        "id": "prOX9fg9slFQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Observation**\n",
+        "\n",
+        "Temperature and humidity have a invrse relationship."
+      ],
+      "metadata": {
+        "id": "2oaID_r0vm09"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Chart - 7"
+      ],
+      "metadata": {
         "id": "KMRg5nocLxJO"
       }
     },
@@ -1559,7 +1544,18 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Chart - 7"
+        "**observation**\n",
+        "\n",
+        "Windspeed  is bewteen 0 to 14 and mostly  0 m/s to 5.5 m/s range fall below 75%."
+      ],
+      "metadata": {
+        "id": "Xfd2HEFxwUxE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Chart - 8"
       ],
       "metadata": {
         "id": "csjcVBpmL0xN"
@@ -1586,7 +1582,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Chart - 8"
+        "#### Chart - 9"
       ],
       "metadata": {
         "id": "GhKC90EDL2tF"
@@ -1622,7 +1618,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Chart - 9"
+        "#### Chart - 10"
       ],
       "metadata": {
         "id": "bjS2JwdNL4nG"
@@ -1657,7 +1653,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Chart - 10 - Correlation Heatmap"
+        "#### Chart - 11 - Correlation Heatmap"
       ],
       "metadata": {
         "id": "NC_X3p0fY2L0"
@@ -1692,109 +1688,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### break"
-      ],
-      "metadata": {
-        "id": "0wIcYX8RRovB"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### Chart - 15 - Pair Plot "
-      ],
-      "metadata": {
-        "id": "q29F0dvdveiT"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "'''# Pair Plot visualization code\n",
-        "sns.pairplot(data=Aep_df2)'''"
-      ],
-      "metadata": {
-        "id": "o58-TEIhveiU"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 2. What is/are the insight(s) found from the chart?"
-      ],
-      "metadata": {
-        "id": "lQ7QKXXCp7Bj"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here"
-      ],
-      "metadata": {
-        "id": "C_j1G7yiqdRP"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 3. Will the gained insights help creating a positive business impact? \n",
-        "Are there any insights that lead to negative growth? Justify with specific reason."
-      ],
-      "metadata": {
-        "id": "448CDAPjqfQr"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here"
-      ],
-      "metadata": {
-        "id": "3cspy4FjqxJW"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 1. Why did you pick the specific chart?"
-      ],
-      "metadata": {
-        "id": "EXh0U9oCveiU"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "eMmPjTByveiU"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 2. What is/are the insight(s) found from the chart?"
-      ],
-      "metadata": {
-        "id": "22aHeOlLveiV"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here"
-      ],
-      "metadata": {
-        "id": "uPQ8RGwHveiV"
-      }
     },
     {
       "cell_type": "markdown",
