--- a/Capstone_Appliances_Energy_Prediction.ipynb
+++ b/Capstone_Appliances_Energy_Prediction.ipynb
@@ -319,7 +319,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# problems\n",
         "1) what is monthly meter reading ?\n",
         "\n",
         "2) What is the meter reading on hourly basis?\n",
@@ -483,8 +482,7 @@
         "from sklearn.model_selection import GridSearchCV\n",
         "from sklearn.model_selection import cross_val_score\n",
         "from sklearn.metrics import mean_squared_error\n",
-        "from sklearn.metrics import r2_score\n",
-        "from sklearn.metrics import mean_absolute_error"
+        "from sklearn.metrics import r2_score"
       ],
       "metadata": {
         "id": "IAnFgWKUZKmr"
@@ -3160,6 +3158,44 @@
       ],
       "metadata": {
         "id": "Popqu_6fANAY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model_comparision.plot.bar(x='Model', y=['Train R2' , 'Test R2' , 'Train Adjusted_R2','Test_Adjusted_R2'], title = 'Results' , figsize= (20,8))"
+      ],
+      "metadata": {
+        "id": "xaznWgu-KkYp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "feature_coef_df= pd.DataFrame({'Variables': X_sem.columns,\n",
+        "                             'Variable_coef': list(lasso_regression.best_estimator_.coef_)})\n",
+        "feature_coef_df"
+      ],
+      "metadata": {
+        "id": "DSK2MhOpM-FM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize=(20,8))\n",
+        "plt.title('Feature Importance', fontsize=20)\n",
+        "sns.barplot(x=\"Variable_coef\",y='Variables', data=feature_coef_df, orient = 'h')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "VcNvdGnuN2iV"
       },
       "execution_count": null,
       "outputs": []
