--- a/Capstone_Appliances_Energy_Prediction.ipynb
+++ b/Capstone_Appliances_Energy_Prediction.ipynb
@@ -319,6 +319,14 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**It is very important to meet the supply and demand of electricity, as the energy consumption is increasing in recent years.\n",
+        "However, when comes to domestic consumers, electricity consumption of house depends on type and quantity of house hold appliances which in turn influenced by weather conditions.**\n",
+        "\n",
+        "The main objective is to build a predictive model, which could help in predicting the energy consumption.\n",
+        "\n",
+        "Along with building model ,will look in some feature behaviour.\n",
+        "\n",
+        "\n",
         "1) what is monthly meter reading ?\n",
         "\n",
         "2) What is the meter reading on hourly basis?\n",
