--- a/Capstone_Appliances_Energy_Prediction.ipynb
+++ b/Capstone_Appliances_Energy_Prediction.ipynb
@@ -337,11 +337,11 @@
         "\n",
         "5) What is the temperature fluctuation in each room ?\n",
         "\n",
-        "6) What is daily wind spead and visibiity ?\n",
+        "6) What is daily wind speed and visibiity ?\n",
         "\n",
         "7) How was visibility with outside temperature?\n",
         "\n",
-        "8) is there any difference in meter reading when compaired to inside and outside temperatur?"
+        "8) is there any difference in meter reading when compaired to inside and outside temperature?"
       ],
       "metadata": {
         "id": "w0NnRXGPvoM8"
@@ -1151,24 +1151,14 @@
         "\n",
         "3)Grouping by date and hour ,so we can get hourly every day data.\n",
         "\n",
-        "4)Creating a set of range of meter readings to find the diferent range and there count.\n"
+        "4)Creating a set of range of meter readings to find the diferent range and there count.\n",
+        "\n",
+        "5) Average Temperature inside house is between 16 to 26 degree celsius(optimum),even tough temperature outside was varing on large range beween -5 to 25 degree celsius.\n",
+        "\n",
+        "6) Humidity is inversly proportion to temperatue\n"
       ],
       "metadata": {
         "id": "LbyXE7I1olp8"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "1) Average Temperature inside house is between 16 to 26 degree celsius(optimum),even tough temperature outside was varing on large range beween -5 to 25 degree celsius.\n",
-        "\n",
-        "2) Humidity is inversly proportion to temperatue\n",
-        "\n",
-        "\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "TnbmAR_bIPSv"
       }
     },
     {
@@ -1222,16 +1212,16 @@
       "source": [
         "**Observation**\n",
         "\n",
-        "1) Meter reading is right skewwed ,with highest count for the meter reading range between 50 to 60.\n",
+        "1) Meter reading is right skewed ,with highest count for the meter reading range between 50 to 60.\n",
         "\n",
-        "2)Kitchen temperture,living room temperature,laundry_room_temp,office_room_temp, bathroom_temp,ironing_room_temp ,teenager_room_temp,parents_room_temp,,Avg_house_Temp allmost every room had normal distribution with nearly high fluctuating range of temperature is beween 18 to 24.\n",
+        "2)Kitchen temperture,living room temperature,laundry_room_temp,office_room_temp, bathroom_temp,ironing_room_temp ,teenager_room_temp,parents_room_temp,,Avg_house_Temp allmost every room had normal distribution with nearly high fluctuating range of temperature is between 18 to 24.\n",
         "**outside_building_temp ,Chievres_weather_station_temp range between -5 to 28**.\n",
         "\n",
         "3)'kitchen_hum','living_room_hum','laundry_room_hum','office_room_hum',,'ironing_room_hum','teenager_room_hum','parents_room_hum',, 'Avg_house_hum' had almost a normal distributed plot range between 30 to 55,where most of the count was beween 38 to 42 .\n",
         "'bathroom_hum**(Right Skewwed).outside_building_hum had a range of humidity from 0 to 100 , with max count between 0 to 5,** \n",
         "**Chievres_weather_station_hum(left skewwed most of the time between 80 to 100).**\n",
         "\n",
-        "4) Visibility of scale 40 was higest.\n"
+        "4) Visibility of scale 40 km was highest.\n"
       ],
       "metadata": {
         "id": "rLCYmUYfqzjD"
@@ -1462,9 +1452,27 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "for i in Temp_in_each :\n",
+        "  temp_room = pd.DataFrame(Aep_df2.groupby('Hour').agg({i : ['min', 'max']}).mean())\n",
+        "  print (temp_room)"
+      ],
+      "metadata": {
+        "id": "GmZSTvS_wVqD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "1)only living room had some fluctuations other than that almost every room had mantained constant  temperature daily."
+        "**Observation**\n",
+        "\n",
+        "only living room had some fluctuations other than that almost every room had mantained constant  temperature daily.\n",
+        "\n",
+        "parents room temperature was cool,following office room and laundry was warm"
       ],
       "metadata": {
         "id": "KqxA46KaFLS_"
@@ -1494,6 +1502,17 @@
     {
       "cell_type": "code",
       "source": [
+        "Daily_Hr_data ['energy_range'].value_counts()"
+      ],
+      "metadata": {
+        "id": "teuebe9EY58w"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "plt.subplots(figsize = (30, 8))\n",
         "plt.grid(visible= True, which='major', axis='both')\n",
         "plt.plot(Daily_Hr_data['Date'],Daily_Hr_data['Chievres_weather_station_temp'],Daily_Hr_data['Date'],Daily_Hr_data['Chievres_weather_station_hum'], linewidth=2.0)\n",
@@ -1513,7 +1532,7 @@
       "source": [
         "**Observation**\n",
         "\n",
-        "Temperature and humidity have a invrse relationship."
+        "Temperature and humidity have a inverse relationship."
       ],
       "metadata": {
         "id": "2oaID_r0vm09"
@@ -1734,7 +1753,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Null_hypothesis = Average temperature inside is almost eqaual to 21 degree celcius\n",
+        "Null_hypothesis = Average temperature inside is almost equal to 21 degree celsius\n",
         "\n",
         "Alternate = Average temperature is not the given values. "
       ],
@@ -1797,7 +1816,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Since,the plot s a normally distributed and mean , meadian is very close, we can perform z test."
+        "Since,the plot  a normally distributed and mean , median is very close, we can perform z test."
       ],
       "metadata": {
         "id": "vN6mX1B4YAje"
@@ -2001,7 +2020,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The distribution is postively skewed. For a skewed data Z-Test can't be performed.For heavily skewed data t-tests  can be used even we can take large sample size."
+        "The distribution is positively skewed. For a skewed data Z-Test can't be performed.For heavily skewed data t-tests  can be used even we can take large sample size."
       ],
       "metadata": {
         "id": "SpN34tqwmeeS"
@@ -2651,7 +2670,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "we used log transformation to normalize the data."
+        "we used log transformation to normalize the dependent data.\n"
       ],
       "metadata": {
         "id": "Ff1GNSiqjzyC"
@@ -2693,15 +2712,6 @@
       ],
       "metadata": {
         "id": "NzAOgNA0kaJW"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "VZAwUEX3kiQB"
       },
       "execution_count": null,
       "outputs": []
@@ -3103,11 +3113,11 @@
       "source": [
         "#Lasso Regression Model Evaluation(Train Data)\n",
         "lasso_train_mse=mean_squared_error(10**(y_train),10**(lasso_y_pred_train))\n",
-        "print(\"Train MSE :\",lasso_train_mse)\n",
+        "print(\"Train_lasso_MSE :\",lasso_train_mse)\n",
         "lasso_train_r2=r2_score(10**(y_train),10**(lasso_y_pred_train))\n",
-        "print(\"Train R2 :\",lasso_train_r2)\n",
+        "print(\"Train_lasso_R2 :\",lasso_train_r2)\n",
         "lasso_train_Adjusted_R2 = 1-(1-r2_score(10**(y_train), 10**(lasso_y_pred_train)))*((X_train.shape[0]-1)/(X_train.shape[0]-X_train.shape[1]-1))\n",
-        "print(\"Train ridge Adjusted_R2 :\" ,lasso_train_Adjusted_R2)"
+        "print(\"Train _lasso_Adjusted_R2 :\" ,lasso_train_Adjusted_R2)"
       ],
       "metadata": {
         "id": "zzgF4jj69VFg"
@@ -3211,307 +3221,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##### Which hyperparameter optimization technique have you used and why?"
-      ],
-      "metadata": {
-        "id": "PiV4Ypx8fxKe"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "negyGRa7fxKf"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### Have you seen any improvement? Note down the improvement with updates Evaluation metric Score Chart."
-      ],
-      "metadata": {
-        "id": "TfvqoZmBfxKf"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "OaLui8CcfxKf"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### ML Model - 2"
-      ],
-      "metadata": {
-        "id": "dJ2tPlVmpsJ0"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### 1. Explain the ML Model used and it's performance using Evaluation metric Score Chart."
-      ],
-      "metadata": {
-        "id": "JWYfwnehpsJ1"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Visualizing evaluation Metric Score chart"
-      ],
-      "metadata": {
-        "id": "yEl-hgQWpsJ1"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### 2. Cross- Validation & Hyperparameter Tuning"
-      ],
-      "metadata": {
-        "id": "-jK_YjpMpsJ2"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# ML Model - 1 Implementation with hyperparameter optimization techniques (i.e., GridSearch CV, RandomSearch CV, Bayesian Optimization etc.)\n",
-        "\n",
-        "# Fit the Algorithm\n",
-        "\n",
-        "# Predict on the model"
-      ],
-      "metadata": {
-        "id": "Dn0EOfS6psJ2"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### Which hyperparameter optimization technique have you used and why?"
-      ],
-      "metadata": {
-        "id": "HAih1iBOpsJ2"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "9kBgjYcdpsJ2"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### Have you seen any improvement? Note down the improvement with updates Evaluation metric Score Chart."
-      ],
-      "metadata": {
-        "id": "zVGeBEFhpsJ2"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "74yRdG6UpsJ3"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### 3. Explain each evaluation metric's indication towards business and the business impact pf the ML model used."
-      ],
-      "metadata": {
-        "id": "bmKjuQ-FpsJ3"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "BDKtOrBQpsJ3"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### ML Model - 3"
-      ],
-      "metadata": {
-        "id": "Fze-IPXLpx6K"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# ML Model - 3 Implementation\n",
-        "\n",
-        "# Fit the Algorithm\n",
-        "\n",
-        "# Predict on the model"
-      ],
-      "metadata": {
-        "id": "FFrSXAtrpx6M"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### 1. Explain the ML Model used and it's performance using Evaluation metric Score Chart."
-      ],
-      "metadata": {
-        "id": "7AN1z2sKpx6M"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Visualizing evaluation Metric Score chart"
-      ],
-      "metadata": {
-        "id": "xIY4lxxGpx6M"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### 2. Cross- Validation & Hyperparameter Tuning"
-      ],
-      "metadata": {
-        "id": "9PIHJqyupx6M"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# ML Model - 3 Implementation with hyperparameter optimization techniques (i.e., GridSearch CV, RandomSearch CV, Bayesian Optimization etc.)\n",
-        "\n",
-        "# Fit the Algorithm\n",
-        "\n",
-        "# Predict on the model"
-      ],
-      "metadata": {
-        "id": "eSVXuaSKpx6M"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### Which hyperparameter optimization technique have you used and why?"
-      ],
-      "metadata": {
-        "id": "_-qAgymDpx6N"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "lQMffxkwpx6N"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### Have you seen any improvement? Note down the improvement with updates Evaluation metric Score Chart."
-      ],
-      "metadata": {
-        "id": "Z-hykwinpx6N"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "MzVzZC6opx6N"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### 1. Which Evaluation metrics did you consider for a positive business impact and why?"
-      ],
-      "metadata": {
-        "id": "h_CCil-SKHpo"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "jHVz9hHDKFms"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### 2. Which ML model did you choose from the above created models as your final prediction model and why?"
-      ],
-      "metadata": {
-        "id": "cBFFvTBNJzUa"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "6ksF5Q1LKTVm"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### 3. Explain the model which you have used and the feature importance using any model explainability tool?"
-      ],
-      "metadata": {
-        "id": "HvGl1hHyA_VK"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "YnvVTiIxBL-C"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "## ***8.*** ***Future Work (Optional)***"
       ],
       "metadata": {
@@ -3570,19 +3279,18 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Conclusion**"
+        "# **Conclusion**\n",
+        "\n",
+        "1) Depedent variable (Appliance energy consumption) has little correlation between feature and among those only  outside_building_temp,Windspeed,Tdewpoint,rv1,Month,Day,Hour are used for model prediction after feature seletion process is done.\n",
+        "\n",
+        "2)Hour variable has large positive corelation in predicting dependent variable.\n",
+        "\n",
+        "3)Even after hyper parameter tunning on regularization,our model had almost same results in all regularization.\n",
+        "\n",
+        "4)model was good beteen train and test as results for test and train were almost same.\n"
       ],
       "metadata": {
-        "id": "gCX9965dhzqZ"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Write the conclusion here."
-      ],
-      "metadata": {
-        "id": "Fjb1IsQkh3yE"
+        "id": "3h-Z6yDFweGf"
       }
     },
     {
