--- a/Capstone_Appliances_Energy_Prediction.ipynb
+++ b/Capstone_Appliances_Energy_Prediction.ipynb
@@ -292,7 +292,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Provide your GitHub Link here."
+        "**GitHub Link here.**\n",
+        "\n",
+        "https://github.com/Imrgit93/Capstone_Appliances-Energy-Prediction"
       ],
       "metadata": {
         "id": "h1o69JH3Eqqn"
@@ -3285,9 +3287,11 @@
         "\n",
         "2)Hour variable has large positive corelation in predicting dependent variable.\n",
         "\n",
-        "3)Even after hyper parameter tunning on regularization,our model had almost same results in all regularization.\n",
+        "3)Even after Hyper parameter tuning on regularization, our model had almost same results in all regularization as there is no such improvement in r2 score \n",
         "\n",
-        "4)model was good beteen train and test as results for test and train were almost same.\n"
+        "4)model was good beteen train and test as results for test and train were almost same.\n",
+        "\n",
+        "5)In all of these models our r2 score was almost 0.169\n"
       ],
       "metadata": {
         "id": "3h-Z6yDFweGf"
