--- a/Capstone_Appliances_Energy_Prediction.ipynb
+++ b/Capstone_Appliances_Energy_Prediction.ipynb
@@ -1719,6 +1719,26 @@
     {
       "cell_type": "markdown",
       "source": [
+        "● Depedent variable (Appliance energy consumption) has little correlation   between feature\n",
+        "\n",
+        "● Correlations between indoor temperature and humidity is high .\n",
+        "\n",
+        "● Chievres_weather_station_temp and outside_building_temp have a high correlation of as both are the outside temperatures.\n",
+        ".\n",
+        "\n",
+        "● Similarly Chievres_weather_station_hum and outside_building_hum\n",
+        "are outside humidity and have a high positive correlation of 0.7.\n",
+        "\n",
+        "● However temperature and humidity levels outside the building are  negatively correlated.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "tmoSWHZx_NiF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## ***5. Hypothesis Testing***"
       ],
       "metadata": {
